# w209_project

./: Dockerfile  README.md  app.py  flaskapp.py  pyproject.toml  run.sh
real-estate-analysis-ui/: package-lock.json  package.json
real-estate-analysis-ui/public/: index.html
real-estate-analysis-ui/src/: App.js  Tableau.jsx  index.css  index.js
real-estate-analysis-ui/src/components/: Footer.jsx  ImageCarousel.jsx  Nav.jsx
real-estate-analysis-ui/src/pages/: About.jsx  CovidImpact.jsx  Home.jsx  WhereToInvest.jsx  WhereToStartBusiness.jsx
real-estate-analysis-ui/src/stylesheets/: About.css  CovidImpact.css  Home.css  ImageCarousel.css  WhereToInvest.css  WhereToStartBusiness.css
real-estate-analysis-ui/src/tableau/: CovidImpactTableau.jsx  CovidImpactTableauB.jsx  WhereToInvestTableau.jsx  WhereToInvestTableauB.jsx  WhereToStartBusinessTableau.jsx  WhereToStartBusinessTableauB.jsx
static/: asset-manifest.json
static/css/: main.31d24049.css  main.31d24049.css.map  main.35a119ab.css  main.35a119ab.css.map
static/js/: 787.aa719bf1.chunk.js  787.aa719bf1.chunk.js.map  main.6fbbd92b.js  main.6fbbd92b.js.map  main.c3aabf0e.js  main.c3aabf0e.js.map  main.f32fba36.js  main.f32fba36.js.LICENSE.txt  main.f32fba36.js.map
templates/: content1.html  content2.html  content3.html  dataset.html  homepage.html  index.html
