[tool.poetry]
name = "w209 Project"
version = "0.1.0"
description = ""
authors = ["Paul Arellano <paul590@berkeley.edu>, Yencheng <yencheng@berkeley.edu>, Steven <stevent1251@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.3.1"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
scipy = "^1.10"
pydantic = "^1.10.8"
joblib = "^1.2.0"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.0"
pandas-plink = "^2.2.9"
matplotlib = "^3.7.2"
numpy = "^1.24.3"
pytest = "^7.3"
httpx = "^0.24.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
